# infotecs_test_task

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: log_level.h  logger.h
libs/logger/: CMakeLists.txt
libs/logger/include/: log_level.h  logger.h
libs/logger/src/: logger.cpp
src/: CMakeLists.txt  logger.cpp  pch.h
src/app/: IModel.h  IPresenter.h  IView.h  application.cpp  application.h  model_layer.cpp  model_layer.h  presenter_layer.cpp  presenter_layer.h  tui_layer.cpp  tui_layer.h
src/utils/: threadwrapper.cpp  threadwrapper.h
